# generative-ai-langchain-cookbook

./: .gitattributes  .gitignore  README.md
01-simple-agent/: README.md
01-simple-agent/data/: azure_openai.txt  langchain_overview.txt  vector_databases.txt
01-simple-agent/examples/: 02_function_calling.py  03_tool_calling.py  07_prompt_templates.py  09_lcel_chains.py
02-multi-agent/: README.md  settings.py  utils.py
02-multi-agent/docs/: QUICKSTART.md  STRUCTURE.md  WORKFLOWS.md
02-multi-agent/src/: agents.py
multi-agent-template/: .env.example  README.md  cli.py  examples.py  pyproject.toml  run.py
multi-agent-template/docs/: QUICKSTART.md  STRUCTURE.md
multi-agent-template/src/: main.py  orchestrator.py
simple-agent-template/: .env.example  README.md  pyproject.toml
simple-agent-template/data/: python_ai.txt  rag_technique.txt
simple-agent-template/examples/: 01_basic_chat.py  04_single_agent.py  05_rag_basic.py  06_short_term_memory.py  08_output_parsers.py  10_streaming.py  settings.py  test.py
